# game-of-life

./: docker-compose.yml  mermaid.md  pyproject.toml
