[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["mhddenno"]
license = "Private"
readme = "README.md"
#If you want to use Poetry only for dependency management but not for packaging, 
# you can disable package mode by setting package-mode = false
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
